k8s/archive/manifests/micro/metallb.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: metallb-system
